--- a/README
+++ b/README
@@ -1,5 +1,15 @@
-Mx44 is a multichannel polyphonic synthesizer, loosely based on
-FM-synthesis, with a Klingon approach to oscillators ...
+Anté-scriptum: this is a recovery from the original codefrom http://web.comhem.se/luna/ which isn't available anymore at the time being (6th April 2021).
+Kudos to Jens M Andreasen  (its original author), it's been released under a GPLv2+ licence, hence it's available for the community to maintain/develop/fork it under the same terms.
+
+
+
+
+Intro
+-----
+
+Mx44 is a multichannel polyphonic synthesizer, loosely based on FM-synthesis, with a Klingon approach to oscillators ...
+
+
 
 Building
 --------
@@ -8,9 +18,8 @@ cd src
 make
 sudo make install
 
-should do the trick. The default is to install the binary
-in /usr/local/bin/ and to install the default patch file
-in /usr/local/share/Mx44.
+should do the trick. The default is to install the binary in /usr/local/bin/ and to install the default patch file in /usr/local/share/Mx44.
+
 
 
 Commandline options
@@ -25,46 +34,37 @@ State / Patches
 ---------------
 Mx44 stores its state and patches in a single file automatically.
 
-Mx44 will attempt to read patches from a file called .mx44patch
-in your home directory. If this fails then it will load the system
-patches in /usr/local/share/Mx44/mx44patch.
+Mx44 will attempt to read patches from a file called .mx44patch in your home directory. If this fails then it will load the system patches in /usr/local/share/Mx44/mx44patch.
 
-Mx44 will automatically write patches to .mx44patch in your
-home directory when it exits.
+Mx44 will automatically write patches to .mx44patch in your home directory when it exits.
 
-There are two new command line options to specify the patch to
-load from and the patch to save to. If you specify a patch to
-load from, you must also specify the patch to save to. This is
+There are two new command line options to specify the patch to load from and the patch to save to. If you specify a patch to load from, you must also specify the patch to save to. This is
 to avoid unintentionally overwriting ~/.mx44patch.
 
-Although you must specify --save-to when specifying --load-from,
-you can specify --save-to without specifying --load-from.
+Although you must specify --save-to when specifying --load-from, you can specify --save-to without specifying --load-from.
+
 
 
 Voices
 ------
 
-Previously you could specify the number of voices for Mx44 to use
-by simply adding a number after the command to run mx44. You must
-now use the --voices= option.
+Previously you could specify the number of voices for Mx44 to use by simply adding a number after the command to run mx44. You must now use the --voices= option.
+
 
 
 Console Operation
 -----------------
 
-Mx44 will run quite happily without a graphical user interface.
-Just supply the --console option on the commandline. Obviously
-you won't be able to edit the patches in this mode. Mx44 will
-also run in this mode if the DISPLAY environment variable is not
-defined.
+Mx44 will run quite happily without a graphical user interface. Just supply the --console option on the commandline. Obviously you won't be able to edit the patches in this mode. Mx44 will
+also run in this mode if the DISPLAY environment variable is not defined.
+
 
 
 Auto-connecting outputs
 -----------------------
 
-Mx44 no longer automatically connects it's outputs to the
-system playback ports. To revert to this behaviour simply add
---auto-connect as a command line option and it will.
+Mx44 no longer automatically connects it's outputs to the system playback ports. To revert to this behaviour simply add --auto-connect as a command line option and it will.
+
 
 
 Implemented GS controllers
@@ -93,5 +93,4 @@ R # Ctrl
 
 
 
-Controllers marked with asterix operates in true RT mode (ie: on a
-sustained note.) The rest is set up at note-on
+Controllers marked with asterix operates in true RT mode (ie: on a sustained note.) The rest is set up at note-on
